Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-17794

UBSAN: array-index-out-of-bounds errors

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.16.0
    • Lustre 2.16.0
    • 3
    • 9223372036854775807

      While testing master branch client build on Ubuntu 24.04 with kernel 6.8.0-31-generic, lots of runtime UBSAN array-index-out-of-bounds errors occurred in dmesg/syslog:

      ------------[ cut here ]------------
      UBSAN: array-index-out-of-bounds in /root/lustre-release/debian/tmp/modules-deb/usr_src/modules/lustre/lnet/lnet/lib-cpt.c:1168:3
      index 0 is out of range for type 'void *[*]'
      CPU: 0 PID: 111835 Comm: modprobe Tainted: G           OE      6.8.0-31-generic #31-Ubuntu
      Hardware name: innotek GmbH VirtualBox/VirtualBox, BIOS VirtualBox 12/01/2006
      Call Trace:
       <TASK>
       dump_stack_lvl+0x48/0x70
       dump_stack+0x10/0x20
       __ubsan_handle_out_of_bounds+0xc6/0x110
       cfs_percpt_alloc+0x138/0x480 [lnet]
       cfs_percpt_lock_create+0xe8/0x2d0 [lnet]
       lnet_lib_init+0xe7/0x400 [lnet]
       lnet_init+0xac/0xff0 [lnet]
       ? __pfx_lnet_init+0x10/0x10 [lnet]
       do_one_initcall+0x5e/0x340
       do_init_module+0xc0/0x2c0
       load_module+0xba1/0xcf0
       init_module_from_file+0x96/0x100
       ? init_module_from_file+0x96/0x100
       idempotent_init_module+0x11c/0x2b0
       __x64_sys_finit_module+0x64/0xd0
       x64_sys_call+0x1d6e/0x25c0
       do_syscall_64+0x7f/0x180
       ? do_syscall_64+0x8c/0x180
       ? syscall_exit_to_user_mode+0x86/0x260
       ? do_syscall_64+0x8c/0x180
       ? syscall_exit_to_user_mode+0x86/0x260
       ? do_syscall_64+0x8c/0x180
       ? exc_page_fault+0x94/0x1b0
       entry_SYSCALL_64_after_hwframe+0x73/0x7b
      RIP: 0033:0x7ce001b2725d
      Code: ff c3 66 2e 0f 1f 84 00 00 00 00 00 90 f3 0f 1e fa 48 89 f8 48 89 f7 48 89 d6 48 89 ca 4d 89 c2 4d 89 c8 4c 8b 4c 24 08 0f 05 <48> 3d 01 f0 ff ff 73 01 c3 48 8b 0d 8b bb 0d 00 f7 d8 64 89 01 48
      RSP: 002b:00007ffde0e96948 EFLAGS: 00000246 ORIG_RAX: 0000000000000139
      RAX: ffffffffffffffda RBX: 00005a202b655da0 RCX: 00007ce001b2725d
      RDX: 0000000000000000 RSI: 00005a202a23be52 RDI: 0000000000000004
      RBP: 00007ffde0e96a00 R08: 0000000000000040 R09: 00007ffde0e96990
      R10: 00007ce001c03b20 R11: 0000000000000246 R12: 00005a202a23be52
      R13: 0000000000040000 R14: 00005a202b655ce0 R15: 0000000000000000
       </TASK>
      ---[ end trace ]---
      

      A full list after running runtests is in:
      https://testing.whamcloud.com/test_logs/6fbc4c52-3c60-4441-8370-43386a3673c4/show_text

            yujian Jian Yu
            yujian Jian Yu
            Votes:
            0 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved: