LU-17794 crypto: replace 1-element array in llcrypt_symlink_data

This patch replaces 1-element array with flexible array
in 'struct llcrypt_symlink_data' to resolve the
UBSAN array-index-out-of-bounds runtime warning.

Test-Parameters: trivial mdtcount=4 mdscount=2 \
  testlist=sanity,sanity-sec

Test-Parameters: optional mdtcount=4 mdscount=2 \
  clientdistro=ubuntu2404 testlist=sanity,sanity-sec

Change-Id: Ia28297ade23c6f739f4bf2bc5f7a4c0c2280bb24
Signed-off-by: Jian Yu <yujian@whamcloud.com>
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/56105
Tested-by: jenkins <devops@whamcloud.com>
Tested-by: Maloo <maloo@whamcloud.com>
Reviewed-by: Yang Sheng <ys@whamcloud.com>
Reviewed-by: Sebastien Buisson <sbuisson@ddn.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>